--- a/Spark/LogisticRegression/SparkLogisticRegression(ForKNNHomeworkData).ipynb
+++ b/Spark/LogisticRegression/SparkLogisticRegression(ForKNNHomeworkData).ipynb
@@ -290,6 +290,24 @@
    "source": [
     "test_summary.predictions.select('prediction').show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_output = test_summary.predictions.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_output.to_csv('D:\\Output.csv',sep=',', encoding='utf-8', index=False)"
+   ]
   }
  ],
  "metadata": {
